--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
   <h3> 2020 </h3>
+  <li> <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Huiming
+  Tian, Zeqiang Li, Yinshui Xia, and Lunyao Wang, "A
+  High-Performance Design of Generalized Pipeline Cellular Array",
+  IEEE Computer Architecture Letters, 2020, accepted for
+  publication.</li>
+
   <li>Lin Chen, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
 "Towards Optimal Logic Representations for Implication-based
 Memristive Circuit", <strong>CSTIC' 20</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
