--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h3> 2020 </h3>
   <li> <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Huiming
-  Tian, Zeqiang Li, Yinshui Xia, and Lunyao Wang, "A
-  High-Performance Design of Generalized Pipeline Cellular Array",
-  IEEE Computer Architecture Letters, 2020, accepted for
-  publication.</li>
+    Tian, Zeqiang Li, Yinshui Xia, and Lunyao Wang, "<A HREF="https://ieeexplore.ieee.org/document/9061012">A
+      High-Performance Design of Generalized Pipeline Cellular
+      Array</a>", IEEE Computer Architecture Letters, 2020, accepted for
+  publication, Early Access.</li>
 
   <li>Lin Chen, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
 "Towards Optimal Logic Representations for Implication-based
