cal and ccf-dac

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+  <li> Mar. 2020, Invited to served as TPC member of <A
+      HREF="https://conf.ccf.org.cn/web/html5/index.html?globalId=574c0f1ef8c04db9bd3b5d718e091b5c&type=1"> CCF-DAC'20</a>. </li>
   <li> Feb. 2020, Invited to served as TPC member of <A
       HREF="https://coinsconf.com/"> COINS'20</a>. </li>
   <li> Jan. 2020, Invited to served as Proceedings Chair of <A
@@ -96,8 +98,8 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
   <li> <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Huiming
     Tian, Zeqiang Li, Yinshui Xia, and Lunyao Wang, "<A HREF="https://ieeexplore.ieee.org/document/9061012">A
       High-Performance Design of Generalized Pipeline Cellular
-      Array</a>", IEEE Computer Architecture Letters, 2020, accepted for
-  publication, Early Access.</li>
+      Array</a>", IEEE Computer Architecture Letters, Jan.-June 1 2020,
+    19(1):47-50.</li>
 
   <li>Lin Chen, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
 "Towards Optimal Logic Representations for Implication-based
