--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
   <h3> 2020 </h3>
+  <li> 
+    Huiming Tian, <A HREF="https://zfchu.github.io/">Zhufei
+      Chu</a>, "Inversion Optimization Strategy
+    based on Primitives with Complement Attribute",
+    <strong>CCF-DAC'20</strong>, CCF Integrated
+    Circuit Design and Automation Conference, accepted
+    for publication.
+    </li>
+
   <li> <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Huiming
     Tian, Zeqiang Li, Yinshui Xia, and Lunyao Wang, "<A HREF="https://ieeexplore.ieee.org/document/9061012">A
       High-Performance Design of Generalized Pipeline Cellular
