--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
   <h3> 2020 </h3>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias
+  Soeken, Yinshui Xia, Lunyao Wang, and Giovanni De Micheli, "<A
+    HREF="https://ieeexplore.ieee.org/document/8747480">Advanced Functional Decomposition Using Majority and Its
+Applications</a>", <i> IEEE Transactions on Computer-Aided Design
+of Integrated Circuits and Systems (<strong>TCAD</strong>)</i>,
+August 2020, 39(8):1621-1634.
+</li>
   <li> 
     Huiming Tian, <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, "Inversion Optimization Strategy
@@ -126,13 +133,6 @@ Memristive Circuit", <strong>CSTIC' 20</strong>, <i> China Semiconductor Technol
   Lunyao Wang, and Yinshui Xia, "<A HREF="https://www.sciencedirect.com/science/article/pii/S0167926019301932"> Multi-Objective Algebraic
        Rewriting in XOR-Majority Graphs</a>", <i> Integration, the
        VLSI Journal</i>, 69:40-49, Sep. 2019.
-</li>
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias
-  Soeken, Yinshui Xia, Lunyao Wang, and Giovanni De Micheli, "<A
-    HREF="https://ieeexplore.ieee.org/document/8747480">Advanced Functional Decomposition Using Majority and Its
-Applications</a>", <i> IEEE Transactions on Computer-Aided Design
-of Integrated Circuits and Systems (<strong>TCAD</strong>)</i>, accepted for
-publication, Early Access.
 </li>
 <li>Libo Qian, Kefang Qian, Xitao He, <A
     HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yidie Ye, Ge
