new html page for bcd adders

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 [<a href="#about">About me</a>]
 [<a href="#publications">Publications</a>]
 [<a href="#links">Links</a>]
+[<a href="#supplements">Supplements</a>]
 [<a href="#address">Address</a>]
 </h4>
 
@@ -255,7 +256,13 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
     Conference Table</a>, <a href="http://www.ieee-ceda.org/">CEDA</a>, 
   <a href="http://ieeexplore.ieee.org/Xplore/dynhome.jsp">Xplore</a>
 </li>
+</ul>
+<HR>
 
+<h2><a name="supplements">Supplements</a></h2>
+<ul> 
+  <li><A HREF="bcd.html">BCD Adder Designs</A>
+</li>
 </ul>
 <HR>
 
