--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+  <li> Aug. 2020, Invited to served as TPC member of <A
+      HREF="https://www.semiconchina.org/en/7">
+      CSTIC'21</a> (Symposium IX). </li>
+  <li> Aug. 2020, Invited to served as TPC member of <A
+      HREF="https://sites.google.com/view/vlsi-soc-2020/home">
+      VLSI-SoC'20</a> (PhD Forum). </li>
+  <li> Aug. 2020, Invited to served as TPC member of <A
+      HREF="http://www.iccd-conf.com/Home.html">
+      ICCD'20</a> (Special Sessions). </li>
   <li> Mar. 2020, Invited to served as TPC member of <A
       HREF="https://conf.ccf.org.cn/web/html5/index.html?globalId=574c0f1ef8c04db9bd3b5d718e091b5c&type=1"> CCF-DAC'20</a>. </li>
   <li> Feb. 2020, Invited to served as TPC member of <A
@@ -63,11 +72,6 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'20</a>.</li>
   <li> Feb. 2019, Invited to served as Proceedings Chair and
     Session Chair of <A HREF="http://www.iwls.org/iwls2019/"> IWLS'19</a>. </li>
-  <li> 12/12/2017, Dr. Chu has been appointed as Associate Professor at Ningbo University. </li>
-	<li> 11/09/2017, Paper "Functional Decomposition using Majority" has been
-    accepted by publication by ASPDAC' 18</li>
-	<li> 15/02/2017, Paper "Improving Circuit Mapping Performance Through MIG-based Synthesis for Carry Chains" has been accepted by publication by GLSVLSI' 17</li>
-    <li> 27/06/2016, Now as a researcher @ EPFL (2016.06-2017.06) Lausanne, Switzerland in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli​</a></li>
 </UL>
 
 <HR>
