BCD adder simulation results

--- a/bcd.html
+++ b/bcd.html
@@ -2,8 +2,12 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+<h1>Simulation results of the BCD adders</h1>
+<br />
+<p>Simulation result of the proposed 1-digit RCA-BCD adder.</p>
+<img src="images/1digit_RCA_simulation.jpg" width="1200"  alt="Simulation result of the proposed 1-digit RCA-BCD adder." />
+<br />
+<p>Simulation result of the proposed 4-digit PBA-BCD adder.</p>
+<img src="images/4digit_PBA_simulation.jpg" width="1800" alt="Simulation result of the proposed 4-digit PBA-BCD adder." />
 </body>
 </html>
