--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+  <li> Oct. 2020, Invited to served as TPC member of <A
+                                                          HREF="https://embeddedandvlsidesignconference.org/">VLSID'21</a>.</li>
   <li> Aug. 2020, Invited to served as TPC member of <A
       HREF="https://www.semiconchina.org/en/7">
       CSTIC'21</a> (Symposium IX). </li>
