--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
     </a></a> </h2>
 <p>
 <OL>
+<h3> 2021 </h3>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
+  Zeqiang Li, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "BCD
+  Adder Designs based on Three-Input XOR and Majority Gates", <i> IEEE Transactions on Circuits and Systems II:
+  Express Briefs(<strong>TCAS-II</strong>)</i>,
+accepted for publication.
+</li>
+
+
   <h3> 2020 </h3>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias
   Soeken, Yinshui Xia, Lunyao Wang, and Giovanni De Micheli, "<A
