cstic & remove extra links

--- a/index.html
+++ b/index.html
@@ -108,7 +108,16 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
   Express Briefs(<strong>TCAS-II</strong>)</i>,
 accepted for publication.
 </li>
+  
+<li>Huiming Tian, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
+"A Novel Toffoli Gate Design Using Quantum-dot Cellular Automata",
+<strong>CSTIC' 21</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
+2021, Shanghai, China. </li>
 
+<li>Xiang He, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
+"Stochastic Circuit Design Based on Exact Synthesis",
+<strong>CSTIC' 21</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
+2021, Shanghai, China. </li>
 
   <h3> 2020 </h3>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias
@@ -272,14 +281,15 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <a href="http://ieeexplore.ieee.org/Xplore/dynhome.jsp">Xplore</a>
 </li>
 </ul>
-<HR>
+
+<!-- <HR>
 
 <h2><a name="supplements">Supplements</a></h2>
 <ul> 
   <li><A HREF="bcd.html">BCD Adder Designs</A>
 </li>
 </ul>
-<HR>
+<HR> -->
 
 <table border=0 cellspacing=5>
 <td width=500>
