--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ August 2020, 39(8):1621-1634.
     19(1):47-50.</li>
 
   <li>Lin Chen, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
-"Towards Optimal Logic Representations for Implication-based
-Memristive Circuit", <strong>CSTIC' 20</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
+"<A HREF="https://ieeexplore.ieee.org/document/9282401">Towards Optimal Logic Representations for Implication-based
+Memristive Circuit</a>", <strong>CSTIC' 20</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
 2020, Shanghai, China. </li>
 
 <li>Zeqi Chen, Jianping Hu, Hao Ye, and <A
