--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
 <h3> 2021 </h3>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
-  Zeqiang Li, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "BCD
-  Adder Designs based on Three-Input XOR and Majority Gates", <i> IEEE Transactions on Circuits and Systems II:
+  Zeqiang Li, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
+                                                             HREF="https://ieeexplore.ieee.org/document/9311242">BCD Adder Designs based on Three-Input XOR and Majority Gates</a>", <i> IEEE Transactions on Circuits and Systems II:
   Express Briefs(<strong>TCAS-II</strong>)</i>,
 accepted for publication.
 </li>
