--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2021 </h3>
+<li>Hui-Ming Tian and <A HREF="https://zfchu.github.io">Zhu-Fei
+    Chu</a>, "Inversion Optimization Strategy based on Primitives
+  with Complement Attributes", <i>Journal of Computer Science and
+    Technology</i>, accepted for publication.
+
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
   Zeqiang Li, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
                                                              HREF="https://ieeexplore.ieee.org/document/9311242">BCD Adder Designs based on Three-Input XOR and Majority Gates</a>", <i> IEEE Transactions on Circuits and Systems II:
