--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
 <h3> 2021 </h3>
 <li>Hui-Ming Tian and <A HREF="https://zfchu.github.io">Zhu-Fei
-    Chu</a>, "Inversion Optimization Strategy based on Primitives
-  with Complement Attributes", <i>Journal of Computer Science and
+    Chu</a>, "<A HREF="http://jcst.ict.ac.cn/EN/10.1007/s11390-021-0898-7">Inversion Optimization Strategy based on Primitives
+    with Complement Attributes</a>", <i>Journal of Computer Science and
     Technology</i>, accepted for publication.
 
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
