--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 [<a href="#news">Recent News</a>]
 [<a href="#about">About me</a>]
 [<a href="#publications">Publications</a>]
+[<a href="#services">Professional Services</a>]
 [<a href="#links">Links</a>]
-[<a href="#supplements">Supplements</a>]
 [<a href="#address">Address</a>]
 </h4>
 
@@ -112,7 +112,7 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
   Zeqiang Li, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
                                                              HREF="https://ieeexplore.ieee.org/document/9311242">BCD Adder Designs based on Three-Input XOR and Majority Gates</a>", <i> IEEE Transactions on Circuits and Systems II:
   Express Briefs(<strong>TCAS-II</strong>)</i>,
-accepted for publication.
+June 2021, 68(6):1942-1946.
 </li>
   
 <li>Huiming Tian, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
@@ -138,8 +138,7 @@ August 2020, 39(8):1621-1634.
       Chu</a>, "Inversion Optimization Strategy
     based on Primitives with Complement Attribute",
     <strong>CCF-DAC'20</strong>, CCF Integrated
-    Circuit Design and Automation Conference, accepted
-    for publication.
+    Circuit Design and Automation Conference, Aug. 2020, Beijing, China.
     </li>
 
   <li> <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Huiming
@@ -176,7 +175,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   Haaswijk, Mathias Soeken, Lunyao Wang, Yinshui Xia, and Giovanni
   De Micheli,  "<A HREF="https://ieeexplore.ieee.org/document/8702141">Exact Synthesis of Boolean Functions in Majority-of-five Forms</a>",
   <strong>ISCAS' 19</strong>, <i> IEEE International Symposium on Circuits and Systems</i>, May
-  2019, Sapporo, Japan, accepted for publication.
+  2019, Sapporo, Japan.
 </li>
 <li>Lei Shi, and <A HREF="https://zfchu.github.io/">Zhufei
     Chu</a>,  "<A HREF="https://ieeexplore.ieee.org/document/8755713">Inversions Optimization in
@@ -211,7 +210,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
   Xia and Lunyao Wang, "Structural Rewriting in XOR-Majority Graphs </a>",
-  <strong>IWLS' 18</strong>, <i>International Wokrshop on Logic & Synthesis</i>, June 2018, San
+  <strong>IWLS' 18</strong>, <i>International Workshop on Logic & Synthesis</i>, June 2018, San
   Francisco, CA, USA.
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
@@ -226,7 +225,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   Xia and  Giovanni De Micheli, "<A
     HREF="http://www.iwls.org/iwls2017/program.php">Functional Decomposition
     Using Majority</a>",
-  <strong>IWLS' 17</strong>, <i>International Wokrshop on Logic & Synthesis</i>, June 2017, Austin, TX, USA.
+  <strong>IWLS' 17</strong>, <i>International Workshop on Logic & Synthesis</i>, June 2017, Austin, TX, USA.
 </li>
 
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Xifan Tang, Mathias
@@ -280,6 +279,25 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 </OL>
 <HR>
 
+<h2><a name="services">Professional Services</a></h2>
+<ul> 
+  <li>Proceedings Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2019-2021.</li>
+  <li>TPC member for the International Conference on VLSI Design, 2020-2021. </li>
+  <li>TPC member for the China Semiconductor Technology International Conference (Symposium IX), 2021-2022. </li>
+  <li>TPC member for the IFIP/IEEE International Conference on Very Large Scale Integration (PhD Forum), 2020. </li>
+  <li>TPC member for the IEEE International Conference on Computer Design (Special Sessions), 2020. </li>
+  <li>TPC member for the IEEE International Conference on Omni-layer Intelligent systems, 2019-2020. </li>
+  <li>TPC member for the CCF Integrated Circuit Design and Automation Conference, 2020-2021. </li>
+  <li>Reviewer for the journal IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems. </li>
+  <li>Reviewer for the journal IEEE Transactions on Emerging Topics in Computing. </li>
+  <li>Reviewer for the journal IEEE Transactions on Circuits and Systems-Part II. </li>
+  <li>Reviewer for the journal IET Circuits, Devices & Systems. </li>
+  <li>Reviewer for the journal Journal of Computer Science and Technology. </li>
+  <li>Reviewer for the journal Integration, the VLSI Journal. </li>
+  <li>Reviewer for the journal Microelectronics Journal. </li>
+  <li>Reviewer for the journal International Journal of Circuit Theory and Applications. </li>
+</ul>
+
 <h2><a name="links">Links</a></h2>
 <ul> 
 <li><a href="http://www.cse.chalmers.se/research/group/vlsi/conference/">VLSI
@@ -287,15 +305,6 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <a href="http://ieeexplore.ieee.org/Xplore/dynhome.jsp">Xplore</a>
 </li>
 </ul>
-
-<!-- <HR>
-
-<h2><a name="supplements">Supplements</a></h2>
-<ul> 
-  <li><A HREF="bcd.html">BCD Adder Designs</A>
-</li>
-</ul>
-<HR> -->
 
 <table border=0 cellspacing=5>
 <td width=500>
