--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@ June 2021, 68(6):1942-1946.
 </li>
   
 <li>Huiming Tian, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
-"A Novel Toffoli Gate Design Using Quantum-dot Cellular Automata",
+    "<A HREF="https://ieeexplore.ieee.org/document/9461426">A Novel Toffoli Gate Design Using Quantum-dot Cellular Automata</a>",
 <strong>CSTIC' 21</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
 2021, Shanghai, China. </li>
 
 <li>Xiang He, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
-"Stochastic Circuit Design Based on Exact Synthesis",
+    "<A HREF="https://ieeexplore.ieee.org/document/9461462">Stochastic Circuit Design Based on Exact Synthesis</a>",
 <strong>CSTIC' 21</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
 2021, Shanghai, China. </li>
 
@@ -296,6 +296,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>Reviewer for the journal Integration, the VLSI Journal. </li>
   <li>Reviewer for the journal Microelectronics Journal. </li>
   <li>Reviewer for the journal International Journal of Circuit Theory and Applications. </li>
+  <li>Reviewer for the journal IET Quantum Communication. </li>
 </ul>
 
 <h2><a name="links">Links</a></h2>
