--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2021 </h3>
+<li>Xuan Wang, <A HREF="https://zfchu.github.io">Zhufei Chu</a>, and Weikang Qian, "MinSC: An Exact Synthesis-Based Method for Minimal Area Stochastic Circuits under Relaxed Error Bound",
+    <strong>ICCAD' 21</strong>, <i>International Conference On Computer Aided Design</i>, Nov. 2021, Virtual online.
+
 <li>Hui-Ming Tian and <A HREF="https://zfchu.github.io">Zhu-Fei
     Chu</a>, "<A HREF="http://jcst.ict.ac.cn/EN/10.1007/s11390-021-0898-7">Inversion Optimization Strategy based on Primitives
     with Complement Attributes</a>", <i>Journal of Computer Science and
