--- a/index.html
+++ b/index.html
@@ -103,13 +103,18 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2021 </h3>
+
+<li>Xiao-Jing Zha, Yin-Shui Xia, Shang-Luan Xie, and <A HREF="https://zfchu.github.io">Zhu-Fei
+    Chu</a>, "Defect-Tolerant Mapping of CMOL Circuit Targeting Delay Optimization</a>", <i>Journal of Computer Science and
+    Technology</i>, accepted for publication, 2021.
+
 <li>Xuan Wang, <A HREF="https://zfchu.github.io">Zhufei Chu</a>, and Weikang Qian, "MinSC: An Exact Synthesis-Based Method for Minimal Area Stochastic Circuits under Relaxed Error Bound",
     <strong>ICCAD' 21</strong>, <i>International Conference On Computer Aided Design</i>, Nov. 2021, Virtual online.
 
 <li>Hui-Ming Tian and <A HREF="https://zfchu.github.io">Zhu-Fei
     Chu</a>, "<A HREF="http://jcst.ict.ac.cn/EN/10.1007/s11390-021-0898-7">Inversion Optimization Strategy based on Primitives
     with Complement Attributes</a>", <i>Journal of Computer Science and
-    Technology</i>, accepted for publication.
+    Technology</i>, accepted for publication, 2021.
 
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
   Zeqiang Li, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
