--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+    <li> Aug. 2021, Invited to served as Finance Chair and TPC
+      member of <A HREF="https://www.iwls.org/">IWLS'22</a>.</li>
     <li> Jan. 2021, Invited to served as Proceedings Chair and TPC member of <A HREF="https://www.iwls.org/iwls2021/">IWLS'21</a>.</li>
   <li> Oct. 2020, Invited to served as TPC member of <A
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'21</a>.</li>
