--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2021 </h3>
+<li> Jianguo Ni, and <A HREF="https://zfchu.github.io">Zhufei
+        Chu</a>, "An Efficient Demultiplexer Design in Quantum-dot Cellular Automata", <strong> ASICON'21 </strong>, <i>IEEE 14th International Conference on ASIC</i>, Oct. 2021, Virtual online.
+
+<li> Chuanhe Shang, and <A HREF="https://zfchu.github.io">Zhufei
+        Chu</a>, "Design of Majority Logic Based 4-bit Approximate Subtractors and Its
+    Application in Divider", <strong> ASICON'21 </strong>, <i>IEEE 14th International Conference on ASIC</i>, Oct. 2021, Virtual online.
 
 <li>Xiao-Jing Zha, Yin-Shui Xia, Shang-Luan Xie, and <A HREF="https://zfchu.github.io">Zhu-Fei
     Chu</a>, "Defect-Tolerant Mapping of CMOL Circuit Targeting Delay Optimization</a>", <i>Journal of Computer Science and
