--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2021 </h3>
+<li>Hui-Ming Tian and <A HREF="https://zfchu.github.io">Zhu-Fei
+    Chu</a>, "<A HREF="http://jcst.ict.ac.cn/EN/10.1007/s11390-021-0898-7">Inversion Optimization Strategy based on Primitives
+    with Complement Attributes</a>", <i>Journal of Computer Science and
+    Technology (<strong>JCST</strong>)</i>, Sep. 2021, 36(5):1145-1154.
+
+<li>Xiao-Jing Zha, Yin-Shui Xia, Shang-Luan Xie, and <A HREF="https://zfchu.github.io">Zhu-Fei
+    Chu</a>, "<A HREF="http://jcst.ict.ac.cn/EN/10.1007/s11390-021-0904-0">Defect-Tolerant Mapping of CMOL Circuit Targeting Delay Optimization</a>", <i>Journal of Computer Science and
+    Technology (<strong>JCST</strong>)</i>, Sep. 2021, 36(5):1118-1132.
+
 <li> Jianguo Ni, and <A HREF="https://zfchu.github.io">Zhufei
         Chu</a>, "An Efficient Demultiplexer Design in Quantum-dot Cellular Automata", <strong> ASICON'21 </strong>, <i>IEEE 14th International Conference on ASIC</i>, Oct. 2021, Virtual online.
 
@@ -112,17 +121,8 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
         Chu</a>, "Design of Majority Logic Based 4-bit Approximate Subtractors and Its
     Application in Divider", <strong> ASICON'21 </strong>, <i>IEEE 14th International Conference on ASIC</i>, Oct. 2021, Virtual online.
 
-<li>Xiao-Jing Zha, Yin-Shui Xia, Shang-Luan Xie, and <A HREF="https://zfchu.github.io">Zhu-Fei
-    Chu</a>, "Defect-Tolerant Mapping of CMOL Circuit Targeting Delay Optimization</a>", <i>Journal of Computer Science and
-    Technology</i>, accepted for publication, 2021.
-
 <li>Xuan Wang, <A HREF="https://zfchu.github.io">Zhufei Chu</a>, and Weikang Qian, "MinSC: An Exact Synthesis-Based Method for Minimal Area Stochastic Circuits under Relaxed Error Bound",
     <strong>ICCAD' 21</strong>, <i>International Conference On Computer Aided Design</i>, Nov. 2021, Virtual online.
-
-<li>Hui-Ming Tian and <A HREF="https://zfchu.github.io">Zhu-Fei
-    Chu</a>, "<A HREF="http://jcst.ict.ac.cn/EN/10.1007/s11390-021-0898-7">Inversion Optimization Strategy based on Primitives
-    with Complement Attributes</a>", <i>Journal of Computer Science and
-    Technology</i>, accepted for publication, 2021.
 
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
   Zeqiang Li, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
