--- a/index.html
+++ b/index.html
@@ -85,14 +85,9 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="about">About me</a> </h2>
 
 <UL>
-	<strong>Zhufei Chu</strong>, born on Oct. 24th, 1986, received the B.S.
-  degree in electronic information science and technology from <a
-  href="http://www.wh.sdu.edu.cn/">Shandong University, Weihai </a>, China, in
-2008 and the M.S. degree in communication and information system from <a
-  href="http://www.nbu.edu.cn/">Ningbo University, Ningbo</a>, China, in 2011, and the Ph.D. degree
-in the same subject, in 2014. From 2014 to 2017, he is a lecturer at Ningbo University. Now, he
-holds Associate Professor position at Ningbo University. 
-During 2016 to 2017, he works as a researcher at the <A HREF="http://lsi.epfl.ch/"> Integrated Systems Laboratory</a> at EPFL, Lausanne, Switzerland in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli​</a>.
+    <strong>Zhufei Chu</strong>, born on Oct. 24th, 1986,  received his B.S. degree in electronic engineering from Shandong University, Weihai, China, in 2008, and his M.S. and Ph.D. degrees in communication and information systems from Ningbo University, Ningbo, in 2011 and 2014, respectively.
+    He was a postdoctoral fellow at the Ecole Polytechnique Federale de Lausanne (EPFL), Lausanne, from 2016 to 2017, in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli</a>.
+    He is currently an associate professor at Ningbo University, Ningbo. His current research interests include many aspects of logic synthesis and its applications.
 </UL>	
 <HR>
 	
@@ -303,7 +298,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>TPC member for the IFIP/IEEE International Conference on Very Large Scale Integration (PhD Forum), 2020. </li>
   <li>TPC member for the IEEE International Conference on Computer Design (Special Sessions), 2020. </li>
   <li>TPC member for the IEEE International Conference on Omni-layer Intelligent systems, 2019-2020. </li>
-  <li>TPC member for the CCF Integrated Circuit Design and Automation Conference, 2020-2021. </li>
+  <li>TPC member and Session Chair for the CCF Integrated Circuit Design and Automation Conference, 2020-2021. </li>
   <li>Reviewer for the journal IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems. </li>
   <li>Reviewer for the journal IEEE Transactions on Emerging Topics in Computing. </li>
   <li>Reviewer for the journal IEEE Transactions on Circuits and Systems-Part II. </li>
@@ -313,6 +308,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>Reviewer for the journal Microelectronics Journal. </li>
   <li>Reviewer for the journal International Journal of Circuit Theory and Applications. </li>
   <li>Reviewer for the journal IET Quantum Communication. </li>
+  <li>Reviewer for the journal IET Computers & Digital Techniques. </li>
 </ul>
 
 <h2><a name="links">Links</a></h2>
