--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+    <li> Oct. 2021, Won the Best Paper Award at CCFDAC 2021.</li>
     <li> Aug. 2021, Invited to served as Finance Chair and TPC
       member of <A HREF="https://www.iwls.org/">IWLS'22</a>.</li>
     <li> Jan. 2021, Invited to served as Proceedings Chair and TPC member of <A HREF="https://www.iwls.org/iwls2021/">IWLS'21</a>.</li>
@@ -100,6 +101,12 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2021 </h3>
+  <li> 
+    Hongyang Pan, <A HREF="https://zfchu.github.io/">Zhufei
+      Chu</a>, "A Semi-Tensor Product Based SAT All Solutions Solver",
+    <strong>CCF-DAC'21</strong>, CCF Integrated
+    Circuit Design and Automation Conference, Oct. 2021, Wuhan, China. (<strong>Best Paper Award</strong>)
+    </li>
 <li>Hui-Ming Tian and <A HREF="https://zfchu.github.io">Zhu-Fei
     Chu</a>, "<A HREF="http://jcst.ict.ac.cn/EN/10.1007/s11390-021-0898-7">Inversion Optimization Strategy based on Primitives
     with Complement Attributes</a>", <i>Journal of Computer Science and
@@ -309,6 +316,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>Reviewer for the journal International Journal of Circuit Theory and Applications. </li>
   <li>Reviewer for the journal IET Quantum Communication. </li>
   <li>Reviewer for the journal IET Computers & Digital Techniques. </li>
+  <li>Reviewer for the journal Optik, International Journal for Light and Electron Optics. </li>
 </ul>
 
 <h2><a name="links">Links</a></h2>
