--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
-    <li> Oct. 2021, Won the Best Paper Award at CCFDAC 2021.</li>
+    <li> Oct. 2021, Won the Best Paper Award at <A HREF="http://conf.ccf.org.cn/ccfdac2021">CCFDAC'21</a>.</li>
     <li> Aug. 2021, Invited to served as Finance Chair and TPC
       member of <A HREF="https://www.iwls.org/">IWLS'22</a>.</li>
     <li> Jan. 2021, Invited to served as Proceedings Chair and TPC member of <A HREF="https://www.iwls.org/iwls2021/">IWLS'21</a>.</li>
@@ -70,7 +70,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
       HREF="http://www.iccd-conf.com/Home.html">
       ICCD'20</a> (Special Sessions). </li>
   <li> Mar. 2020, Invited to served as TPC member of <A
-      HREF="https://conf.ccf.org.cn/web/html5/index.html?globalId=574c0f1ef8c04db9bd3b5d718e091b5c&type=1"> CCF-DAC'20</a>. </li>
+      HREF="https://conf.ccf.org.cn/web/html5/index.html?globalId=574c0f1ef8c04db9bd3b5d718e091b5c&type=1"> CCFDAC'20</a>. </li>
   <li> Feb. 2020, Invited to served as TPC member of <A
       HREF="https://coinsconf.com/"> COINS'20</a>. </li>
   <li> Jan. 2020, Invited to served as Proceedings Chair of <A
@@ -104,7 +104,7 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
   <li> 
     Hongyang Pan, <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, "A Semi-Tensor Product Based SAT All Solutions Solver",
-    <strong>CCF-DAC'21</strong>, CCF Integrated
+    <strong>CCFDAC'21</strong>, CCF Integrated
     Circuit Design and Automation Conference, Oct. 2021, Wuhan, China. (<strong>Best Paper Award</strong>)
     </li>
 <li>Hui-Ming Tian and <A HREF="https://zfchu.github.io">Zhu-Fei
@@ -155,7 +155,7 @@ August 2020, 39(8):1621-1634.
     Huiming Tian, <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, "Inversion Optimization Strategy
     based on Primitives with Complement Attribute",
-    <strong>CCF-DAC'20</strong>, CCF Integrated
+    <strong>CCFDAC'20</strong>, CCF Integrated
     Circuit Design and Automation Conference, Aug. 2020, Beijing, China.
     </li>
 
