--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
-    <li> Oct. 2021, Won the Best Paper Award at <A HREF="http://conf.ccf.org.cn/ccfdac2021">CCFDAC'21</a>.</li>
+    <li> Oct. 2021, Won the Best Paper Award at <A HREF="http://conf.ccf.org.cn/ccfdac2021">CCFDAC'21</a>. (<A HREF="https://news.nbu.edu.cn/info/1004/42169.htm">NBU link</a>)</li>
     <li> Aug. 2021, Invited to served as Finance Chair and TPC
       member of <A HREF="https://www.iwls.org/">IWLS'22</a>.</li>
     <li> Jan. 2021, Invited to served as Proceedings Chair and TPC member of <A HREF="https://www.iwls.org/iwls2021/">IWLS'21</a>.</li>
@@ -101,6 +101,9 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2021 </h3>
+<li>
+    储著飞，王伦耀，夏银水，"基于多逻辑域的逻辑综合研究进展"，<i>微纳电子与智能制造</i>，2021，录用待发表. (<strong>Invited</strong>)
+</li>
   <li> 
     Hongyang Pan, <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, "A Semi-Tensor Product Based SAT All Solutions Solver",
