--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+   <li> Oct. 2021, Invited to served as TPC member of <A
+                                                          HREF="https://embeddedandvlsidesignconference.org/">VLSID'22</a>.</li>
     <li> Oct. 2021, Won the Best Paper Award at <A HREF="http://conf.ccf.org.cn/ccfdac2021">CCFDAC'21</a>. (<A HREF="https://news.nbu.edu.cn/info/1004/42169.htm">NBU link</a>)</li>
     <li> Aug. 2021, Invited to served as Finance Chair and TPC
       member of <A HREF="https://www.iwls.org/">IWLS'22</a>.</li>
@@ -303,7 +305,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 <h2><a name="services">Professional Services</a></h2>
 <ul> 
   <li>Proceedings Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2019-2021.</li>
-  <li>TPC member for the International Conference on VLSI Design, 2020-2021. </li>
+  <li>TPC member for the International Conference on VLSI Design, 2020-2022. </li>
   <li>TPC member for the China Semiconductor Technology International Conference (Symposium IX), 2021-2022. </li>
   <li>TPC member for the IFIP/IEEE International Conference on Very Large Scale Integration (PhD Forum), 2020. </li>
   <li>TPC member for the IEEE International Conference on Computer Design (Special Sessions), 2020. </li>
