--- a/index.html
+++ b/index.html
@@ -102,6 +102,17 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
     </a></a> </h2>
 <p>
 <OL>
+  <h3> 2022 </h3>
+  <li>Hongwei Zhou, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
+    "Area-aware optimization of XOR-AND Graph based on Reed-Muller logic expansion</a>",
+<strong>CSTIC' 22</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
+2022, Hangzhou, China. </li>
+
+<li>Liangtao Shi, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
+  "Using Mixed Logic Synthesis Tools in Open-Source FPGA Design Framework</a>",
+<strong>CSTIC' 22</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
+2022, Hangzhou, China. </li>
+
 <h3> 2021 </h3>
 <li>
     储著飞，王伦耀，夏银水，"基于多逻辑域的逻辑综合研究进展"，<i>微纳电子与智能制造</i>，2021，录用待发表. (<strong>Invited</strong>)
