--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
   <h3> 2022 </h3>
+  <li>Xiang He and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
+    "Stochastic Circuit Synthesis via Satisfiability</a>", <i> Integration, the
+       VLSI Journal</i>, Accepted for publication. </li>
+  
   <li>Hongwei Zhou, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
     "Area-aware optimization of XOR-AND Graph based on Reed-Muller logic expansion</a>",
 <strong>CSTIC' 22</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
@@ -118,7 +122,7 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
     储著飞，王伦耀，夏银水，"基于多逻辑域的逻辑综合研究进展"，<i>微纳电子与智能制造</i>，2021，录用待发表. (<strong>Invited</strong>)
 </li>
   <li> 
-    Hongyang Pan, <A HREF="https://zfchu.github.io/">Zhufei
+    Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, "A Semi-Tensor Product Based SAT All Solutions Solver",
     <strong>CCFDAC'21</strong>, CCF Integrated
     Circuit Design and Automation Conference, Oct. 2021, Wuhan, China. (<strong>Best Paper Award</strong>)
