--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
   <h3> 2022 </h3>
+  <li> Peng Liu, Jianguo Ni, and <A HREF="https://zfchu.github.io/">Zhufei
+      Chu</a>, "Wire-crossings Optimization
+    Based on Majority-of-five and XOR-of-three Primitives in QCA </a>",
+  <i>International Journal of Theoretical Physics</i>, Accepted for
+  publication.</li>
+
   <li>Xiang He and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
     "Stochastic Circuit Synthesis via Satisfiability</a>", <i> Integration, the
        VLSI Journal</i>, Accepted for publication. </li>
