--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
   publication.</li>
 
   <li>Xiang He and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
-    "Stochastic Circuit Synthesis via Satisfiability</a>", <i> Integration, the
-       VLSI Journal</i>, Accepted for publication. </li>
+    "<A HREF="https://www.sciencedirect.com/science/article/pii/S0167926021001243">Stochastic Circuit Synthesis via Satisfiability</a>", <i> Integration, the
+       VLSI Journal</i>, May 2022, 84:84-91. </li>
   
   <li>Hongwei Zhou, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
     "Area-aware optimization of XOR-AND Graph based on Reed-Muller logic expansion</a>",
@@ -334,6 +334,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>TPC member and Session Chair for the CCF Integrated Circuit Design and Automation Conference, 2020-2021. </li>
   <li>Reviewer for the journal IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems. </li>
   <li>Reviewer for the journal IEEE Transactions on Emerging Topics in Computing. </li>
+  <li>Reviewer for the journal IEEE Transactions on Circuits and Systems-Part I. </li>
   <li>Reviewer for the journal IEEE Transactions on Circuits and Systems-Part II. </li>
   <li>Reviewer for the journal IET Circuits, Devices & Systems. </li>
   <li>Reviewer for the journal Journal of Computer Science and Technology. </li>
